Store last user details on a per display basis

REVIEW: 107950
BUG: 311499